[package]
name = "raytracer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rand = "0.8.4"
rayon = "1.5"
rlua = { version = "0.17", optional = true }
tobj = "3.2"

[features]
default = []
lua = ["rlua"]
