[package]
name = "sdl"
description = "Scene description language tokenizer, AST, and interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
image = "0.23.14"
raytracer = { path = "../raytracer" }
thiserror = "1.0.29"
